--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
     "dotenv": "^17.2.3",
     "redis": "^5.8.3",
     "tunnel-ssh": "^5.1.2"
+  },
+  "devDependencies": {
+    "@types/blessed": "^0.1.25",
+    "@types/node": "^24.6.2",
+    "@types/ssh2": "^1.15.5",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
